--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -3,13 +3,21 @@
 cmake_minimum_required(VERSION 3.15)
 project(sanctimonia-core)
 
+# --- Dependencies ---
+
+# Python
 find_package(Python COMPONENTS Interpreter Development.Module REQUIRED)
 
+# nanobind
 execute_process(
   COMMAND "${Python_EXECUTABLE}" -m nanobind --cmake_dir
   OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE nanobind_ROOT)
-
 find_package(nanobind CONFIG REQUIRED)
+
+# Eigen3
+find_package(Eigen3 3.3...5 REQUIRED NO_MODULE)
+
+# --- Target Definition ---
 
 nanobind_add_module(
     core 
@@ -17,6 +25,12 @@ nanobind_add_module(
     src/main.cpp
 )
 
+# --- Configuration ---
+
+# Eigenをリンク
+target_link_libraries(core PRIVATE Eigen3::Eigen)
+
+# macOS specific configuration
 if(APPLE)
     target_compile_options(core PRIVATE "-stdlib=libc++")
     target_link_options(core PRIVATE "-stdlib=libc++")
@@ -32,5 +46,7 @@ if(APPLE)
         endif()
     endif()
 endif()
+
+# --- Installation ---
 
 install(TARGETS core LIBRARY DESTINATION sanctimonia)
